rendered/envs/zoo/gitea/namespace-gitea.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: gitea
  namespace: gitea
