rendered/envs/zoo/gitea/service-gitea-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.21.3
    helm.sh/chart: gitea-10.0.2
    version: 1.21.3
  name: gitea-http
  namespace: gitea
spec:
  clusterIP: None
  ports:
    - name: http
      port: 3000
      targetPort: null
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  type: ClusterIP
