rendered/envs/zoo/gitea/ingress-gitea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.21.3
    helm.sh/chart: gitea-10.0.2
    version: 1.21.3
  name: gitea
  namespace: gitea
spec:
  ingressClassName: traefik
  rules:
    - host: git.zoo.budd.ee
      http:
        paths:
          - backend:
              service:
                name: gitea-http
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - git.zoo.budd.ee
      secretName: gitea-tls
